# term_paper_zaberov_drf_7

./: .env.simple  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
core/: celery.py  settings.py  urls.py
fixtures/: habits_data.json  users_data.json
habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
htmlcov/: d_01a540c812feb8ed___init___py.html  d_01a540c812feb8ed_apps_py.html  d_01a540c812feb8ed_urls_py.html  d_1df033120bbcc412___init___py.html  d_1df033120bbcc412_csu_py.html  d_1df033120bbcc412_users_commands_py.html  d_306da91e26d1596c_0001_initial_py.html  d_306da91e26d1596c_0002_initial_py.html  d_306da91e26d1596c___init___py.html  d_57760688d1f824db___init___py.html  d_57760688d1f824db_asgi_py.html  d_57760688d1f824db_celery_py.html  d_57760688d1f824db_settings_py.html  d_57760688d1f824db_urls_py.html  d_57760688d1f824db_wsgi_py.html  d_5930eb036c798fe8___init___py.html  d_5930eb036c798fe8_user_py.html  d_799887e2301a09ca___init___py.html  d_799887e2301a09ca_admin_py.html  d_799887e2301a09ca_apps_py.html  d_799887e2301a09ca_models_py.html  d_799887e2301a09ca_paginators_py.html  d_799887e2301a09ca_permissions_py.html  d_799887e2301a09ca_serializers_py.html  d_799887e2301a09ca_services_py.html  d_799887e2301a09ca_tasks_py.html  d_799887e2301a09ca_tests_py.html  d_799887e2301a09ca_urls_py.html  d_799887e2301a09ca_validators_py.html  d_799887e2301a09ca_views_py.html  d_8b562f3fe71efc7d___init___py.html  d_9f6ce033c5b20e37___init___py.html  (+17 more)
users/: admin.py  (+3 more)
(+9 files in other folders)
